--- a/MixFlow.UI/App.axaml
+++ b/MixFlow.UI/App.axaml
@@ -1,15 +1,12 @@
-﻿<Application xmlns="https://github.com/avaloniaui"
+<Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MixFlow.UI"
+             xmlns:local="using:MixFlow.UI"
              x:Class="MixFlow.UI.App">
     <Application.DataTemplates>
         <local:ViewLocator/>
     </Application.DataTemplates>
 
     <Application.Styles>
-        <StyleInclude Source="avares://Avalonia.Themes.Default/DefaultTheme.xaml"/>
-        <StyleInclude Source="avares://Avalonia.Themes.Default/Accents/BaseDark.xaml"/>
-
-        <StyleInclude Source="avares://MixFlow.UI/Styles/DefaultTheme.axaml"/>
+        <FluentTheme Mode="Dark"/>
     </Application.Styles>
 </Application>
