--- a/MixFlow.UI/Views/MainWindow.axaml
+++ b/MixFlow.UI/Views/MainWindow.axaml
@@ -1,22 +1,30 @@
-﻿<Window xmlns="https://github.com/avaloniaui"
+<Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="clr-namespace:MixFlow.UI.ViewModels;assembly=MixFlow.UI"
+        xmlns:vm="using:MixFlow.UI.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="MixFlow.UI.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
-        Title="MixFlow">
+        Title="MixFlow.UI"
+        
+        TransparencyLevelHint="AcrylicBlur"
+        Background="Transparent"
+        ExtendClientAreaToDecorationsHint="True">
 
     <Design.DataContext>
-      <!--<ExperimentalAcrylicBorder>
-        <ExperimentalAcrylicBorder.Material>
-          <ExperimentalAcrylicMaterial BackgroundSource="Digger" TintColor="Black" TintOpacity="1" MaterialOpacity="1"/>  
-        </ExperimentalAcrylicBorder.Material>
-      </ExperimentalAcrylicBorder>-->
-      <vm:MainWindowViewModel/>
+        <vm:MainWindowViewModel/>
     </Design.DataContext>
 
-    <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-
+    <Panel>
+      <ExperimentalAcrylicBorder IsHitTestVisible="False">
+        <ExperimentalAcrylicBorder.Material>
+          <ExperimentalAcrylicMaterial
+              BackgroundSource="Digger"
+              TintColor="Black"
+              TintOpacity="1"
+              MaterialOpacity="0.65" />
+        </ExperimentalAcrylicBorder.Material>
+      </ExperimentalAcrylicBorder>
+    </Panel>
 </Window>
